Opened 14 years ago
Closed 14 years ago
#1320 closed defect (fixed)
ffplay hang in avformat_find_stream_info
| Reported by: | Ching Yi, Chan | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avformat |
| Version: | git-master | Keywords: | http |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
I try to play the streaming url:
./ffplay http://nextmedia-f.akamaihd.net/nexttvlive_1_300@49187
It stuck when invoke avformat_find_stream_info.
My ffplay is built from the latest source code: 4d3787763218de4c3e838b31f0fb2153b8d6af20
I verify it by adding log message:
diff --git a/ffplay.c b/ffplay.c
index 3c5ef68..050398b 100644
--- a/ffplay.c
+++ b/ffplay.c
@@ -2499,7 +2499,9 @@ static int read_thread(void *arg)
opts = setup_find_stream_info_opts(ic, codec_opts);
orig_nb_streams = ic->nb_streams;
+ fprintf(stderr, "before find info\n");
err = avformat_find_stream_info(ic, opts);
+ fprintf(stderr, "after find info\n");
if (err < 0) {
fprintf(stderr, "%s: could not find codec parameters\n", is->filename);
ret = -1;
Change History (4)
comment:1 by , 14 years ago
| Priority: | normal → important |
|---|---|
| Reproduced by developer: | set |
| Status: | new → open |
follow-up: 3 comment:2 by , 14 years ago
Bogus server: the server pretends to support seeking, but in fact only skips the unwanted data at the rhythm it would have been sent; you would have to wait for 2 Go to have been skipped to look at the end of the file, and then probably watch it fail because it can not seek back to the beginning of the file.
http://ffmpeg.org/pipermail/ffmpeg-devel/2012-May/124787.html contains a patch that adds an option to disable seeking. You would use it like this: http,+seek+0++://nextmedia....
comment:3 by , 14 years ago
Replying to Cigaes:
Bogus server: the server pretends to support seeking, but in fact only skips the unwanted data at the rhythm it would have been sent; you would have to wait for 2 Go to have been skipped to look at the end of the file, and then probably watch it fail because it can not seek back to the beginning of the file.
http://ffmpeg.org/pipermail/ffmpeg-devel/2012-May/124787.html contains a patch that adds an option to disable seeking. You would use it like this:
http,+seek+0++://nextmedia....
Thanks for your patch. It works well now.
comment:4 by , 14 years ago
| Keywords: | http added |
|---|---|
| Resolution: | → fixed |
| Status: | open → closed |
Fixed by Michael.



The hang is reproducible.