http: try to detect live akamai streams and dont enable seeking for them

Fixes ticket1320

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>